fixed spacing

--- a/index.css
+++ b/index.css
@@ -145,7 +145,9 @@ section#descriptions ul.col {
 	flex: none;
 	width: calc((100% - 2rem) / 2);
 }
-
+section#descriptions ul.col > li:first-child h2 {
+	margin-top: 0
+}
 
 
 
@@ -169,6 +171,9 @@ span.options a.active, span.options a:hover {
 
 snippet { display: none }
 
+#copyright-line {
+	opacity: 0.4;
+}
 
 
 /* hljs */
